# facialOpenCV

./: .gitignore  CMakeLists.txt  README.md  Real-Time Private.md  TODO1.md  call.md
models/: README.md
referCode/: demo.cpp
scripts/: download_yunet.ps1
src/: face_detector.cpp  face_detector.h  main.cpp  scan_cameras.cpp
